--- a/pom.xml
+++ b/pom.xml
@@ -8,22 +8,24 @@
 	<name>MapPush</name>
 
 	<properties>
-		<!-- <atmosphere.version>0.8.5</atmosphere.version> -->
-		<!-- <jersey.version>1.9.1</jersey.version> -->
-		<atmosphere.version>0.9-SNAPSHOT</atmosphere.version>
+		<atmosphere.version>0.9.0.RC1</atmosphere.version>
 		<jersey.version>1.10</jersey.version>
 		<javaee.version>6.0</javaee.version>
 		<junit.version>4.8.2</junit.version>
 		<logback.version>0.9.30</logback.version>
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
 		<maven-war-plugin.version>2.1.1</maven-war-plugin.version>
-		<jetty.version>8.1.0.v20120127</jetty.version>
+		<jetty.version>8.1.1.v20120215</jetty.version>
 	</properties>
 
 	<repositories>
 		<repository>
-			<id>Mockito-all</id>
-			<url>http://repo2.maven.org/maven2/org/mockito/mockito-all</url>
+			<id>Sonatype snapshots</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</repository>
+		<repository>
+			<id>Sonatype releases</id>
+			<url>https://oss.sonatype.org/content/repositories/releases</url>
 		</repository>
 	</repositories>
 
@@ -31,15 +33,20 @@
 		<!-- Atmosphere -->
 		<dependency>
 			<groupId>org.atmosphere</groupId>
+			<artifactId>atmosphere-runtime</artifactId>
+			<version>${atmosphere.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.atmosphere</groupId>
 			<artifactId>atmosphere-jersey</artifactId>
 			<version>${atmosphere.version}</version>
 		</dependency>
-		<!-- <dependency> -->
-		<!-- <groupId>org.atmosphere</groupId> -->
-		<!-- <artifactId>atmosphere-jquery</artifactId> -->
-		<!-- <version>0.9-SNAPSHOT</version> -->
-		<!-- <type>war</type> -->
-		<!-- </dependency> -->
+		<dependency>
+			<groupId>org.atmosphere</groupId>
+			<artifactId>atmosphere-jquery</artifactId>
+			<version>${atmosphere.version}</version>
+			<type>war</type>
+		</dependency>
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-json</artifactId>
@@ -60,12 +67,6 @@
 			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>1.9.0</version>
-			<scope>test</scope>
-		</dependency>
 
 		<!-- Log -->
 		<dependency>
@@ -76,7 +77,6 @@
 	</dependencies>
 
 	<!-- Build -->
-
 	<build>
 		<finalName>MapPush</finalName>
 		<plugins>
@@ -91,7 +91,18 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>${maven-war-plugin.version}</version>
+				<version>2.2</version>
+				<configuration>
+					<overlays>
+						<overlay>
+							<groupId>org.atmosphere</groupId>
+							<artifactId>atmosphere-jquery</artifactId>
+							<includes>
+								<include>jquery/jquery.atmosphere.js</include>
+							</includes>
+						</overlay>
+					</overlays>
+				</configuration>
 			</plugin>
 			<plugin>
 				<groupId>org.mortbay.jetty</groupId>
