--- a/pom.xml
+++ b/pom.xml
@@ -8,10 +8,13 @@
 	<name>MapPush</name>
 
 	<properties>
-		<atmosphere.version>0.9.0.RC3</atmosphere.version>
+		<atmosphere.version>0.9.1</atmosphere.version>
 		<jersey.version>1.10</jersey.version>
+		<nettosphere.version>1.3.1</nettosphere.version>
+		<ahc.version>1.7.4</ahc.version>
 		<javaee.version>6.0</javaee.version>
 		<junit.version>4.8.2</junit.version>
+		<testng.version>6.5.2</testng.version>
 		<logback.version>0.9.30</logback.version>
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
 		<maven-war-plugin.version>2.1.1</maven-war-plugin.version>
@@ -53,14 +56,27 @@
 			<version>${jersey.version}</version>
 		</dependency>
 
+		<!-- Nettosphere -->
 		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-api</artifactId>
-			<version>${javaee.version}</version>
-			<scope>provided</scope>
+			<groupId>org.atmosphere</groupId>
+			<artifactId>nettosphere</artifactId>
+			<version>${nettosphere.version}</version>
+		</dependency>
+
+		<!-- AHC -->
+		<dependency>
+			<groupId>com.ning</groupId>
+			<artifactId>async-http-client</artifactId>
+			<version>${ahc.version}</version>
 		</dependency>
 
 		<!-- Test -->
+		<dependency>
+			<groupId>org.testng</groupId>
+			<artifactId>testng</artifactId>
+			<version>${testng.version}</version>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
