--- a/pom.xml
+++ b/pom.xml
@@ -12,18 +12,18 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.6</java.version>
 		<!-- Libraries -->
-		<jersey.version>1.10</jersey.version>
-		<atmosphere.version>0.9.5</atmosphere.version>
-		<nettosphere.version>1.4.0</nettosphere.version>
-		<ahc.version>1.7.5</ahc.version>
+		<jersey.version>1.12</jersey.version>
+		<atmosphere.version>1.0.0</atmosphere.version>
+		<nettosphere.version>1.4.2</nettosphere.version>
+		<ahc.version>1.7.6</ahc.version>
 		<!-- Test -->
-		<testng.version>6.7</testng.version>
+		<testng.version>6.8</testng.version>
 		<!-- Log -->
-		<logback.version>1.0.6</logback.version>
+		<logback.version>1.0.7</logback.version>
 		<!-- Maven plugins -->
 		<maven-compiler-plugin.version>2.3.2</maven-compiler-plugin.version>
-		<maven-war-plugin.version>2.1.1</maven-war-plugin.version>
-		<jetty.version>8.1.1.v20120215</jetty.version>
+		<maven-war-plugin.version>2.2</maven-war-plugin.version>
+		<jetty.version>8.1.7.v20120910</jetty.version>
 	</properties>
 
 	<repositories>
@@ -116,7 +116,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.2</version>
+				<version>${maven-war-plugin.version}</version>
 				<configuration>
 					<overlays>
 						<overlay>
